2008-06-19  Wim Taymans  <wim.taymans@collabora.co.uk>

	* examples/app/appsink-src.c: (on_new_buffer_from_source):
	Don't use a buffer after unreffing it.

2008-06-18  Stefan Kost  <ensonic@users.sf.net>

	* ext/metadata/metadataexif.c:
	  Add description tag mapping.

2008-06-18  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* examples/app/appsrc-ra.c:
	* examples/app/appsrc-seekable.c:
	* examples/app/appsrc-stream.c:
	* examples/app/appsrc-stream2.c:
	* ext/directfb/dfbvideosink.h:
	* ext/metadata/gstbasemetadata.c:
	* ext/metadata/gstbasemetadata.h:
	* ext/metadata/metadata.c:
	* ext/metadata/metadataexif.c:
	* ext/theora/theoradec.h:
	* gst/deinterlace2/gstdeinterlace2.h:
	* gst/deinterlace2/tvtime/speedy.c:
	* gst/deinterlace2/tvtime/speedy.h:
	* gst/deinterlace2/tvtime/vfir.c:
	 Fix gtk-doc warnings. Also don't misuse api-doc comments for normal
	 comments.

2008-06-17  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/resindvd/resindvdbin.c:
	Parse the URI argument into the device name so dvd:///path/to/image
	works.

	* ext/resindvd/resindvdsrc.c:
	Implement a trivial duration query reporting the current PGC length.

	* gst/dvdspu/gstdvdspu.c:
	Rename typo in the function name.

2008-06-17  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	Disable deinterlace2 plugin again which was accidently enabled
	with last commit.

2008-06-17  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* ext/resindvd/resindvdsrc.h:
	Make resindvd work with libdvdnav >= 4.0.0.

2008-06-17  Jan Schmidt  <thaytan@noraisin.net>

	* configure.ac:
	Check for libdvdnav to build resindvd.

	* ext/Makefile.am:
	* ext/resindvd/Makefile.am:
	* ext/resindvd/gstmpegdefs.h:
	* ext/resindvd/gstmpegdemux.c:
	* ext/resindvd/gstmpegdemux.h:
	* ext/resindvd/gstmpegdesc.c:
	* ext/resindvd/gstmpegdesc.h:
	* ext/resindvd/gstpesfilter.c:
	* ext/resindvd/gstpesfilter.h:
	* ext/resindvd/plugin.c:
	* ext/resindvd/resin-play: