@@ -1,3 +1,9 @@
+2008-06-19  Stefan Kost  <ensonic@users.sf.net>
+
+	* gst/selector/gstoutputselector.c:
+	* tests/icles/output-selector-test.c:
+	  Use BOILERPLATE macro and update test to the latest api changes.
+
 2008-06-19  Wim Taymans  <wim.taymans@collabora.co.uk>
 
 	* examples/app/appsink-src.c: (on_new_buffer_from_source):
